# untitled-action-game

./: .gitignore  CMakeLists.txt  build.bat  game.sublime-project  notes.txt  old_CMakeLists.txt  readme.md  readme.txt  rmdy.bat  run.bat
code/: COLLISION.CPP  EDITOR.CPP  GAME.CPP  GUI.CPP  MAP.CPP  SHADERS.CPP  UTILITY.CPP  anim.cpp  anim.h  cam.cpp  cam.h  common.cpp  common.h  corpses.cpp  corpses.h  debugmenu.cpp  debugmenu.h  enemy.cpp  enemy.h  facebatch.cpp  facebatch.h  filedialog.cpp  filedialog.h  game.cpp  game.h  game_assets.cpp  game_assets.h  gpu_resources.cpp  gpu_resources.h  gui.cpp  gui.h  instanced.cpp  instanced.h  leveleditor.cpp  leveleditor.h  levelentities.cpp  levelentities.h  lightmap.cpp  lightmap.h  lm_oct.cpp  (+34 more)
docs/: asset-creation.md  readme.md  renderdoc-integration.md  shading.md
ext/: BUILDINFO.H.IN  gmath.h  noclip.h  stb_ds.h  stb_image.h  vertext.h
ext/SDL3_mixer/Debug/: SDL3_mixer.lib
ext/recast/Debug/: DebugUtils-d.lib  Detour-d.lib  Recast-d.lib
ext/recast/Includes/: DetourDebugDraw.h
ext/recast/Release/: DebugUtils.lib  Detour.lib  Recast.lib
radiant/: CMakeLists.txt  cuda_helpers.h  lm_bake.cu  lm_bake.h  make_program.bat  optixir_binary.h  radiant.cpp  radiant.h  readme.txt  trace_radiance.cu  trace_radiance.h  trace_radiance.optixir  trace_radiance_release.optixir  vec_math.h
radiant/Debug/: radiant.exp  radiant.lib
radiant/Release/: radiant.exp  radiant.lib
radiant/optix/: CMakeLists.txt  bin_to_cpp.py  readme.txt
recast/DebugUtils/: CMakeLists.txt
recast/Detour/: CMakeLists.txt
recast/Recast/: CMakeLists.txt
wd/: House.emf  IrradianceCachingTest.emf  LightTest.emf  LightTest.map  LightTest_Directional.map  LightTest_Directional_BetterPadding.map  LightTest_Directional_WithOcclusion.map  LightTest_Normals.map  LightTest_Normals2.map  LightTest_Patches.map  LightTest_Patches2.map  LightTest_PatchesWithPadding.map  SlopesTest.emf  SunlightTestRooms.emf  SunlightTestRooms2.emf  SunlightTestRooms3.emf  __game_level.frag  __game_level.vert  __patches_id.frag  __patches_id.vert  buildtest.map  buildtest2.map  enemy_bodyguard.blend  enemy_bodyguard.blend1  fuckingaround.emf  fun.emf  fun.map  lailo.emf  magnificient.emf  playground_0.emf  playground_1.emf  pretty-fucking-easy.emf  quick.map  ramps.emf  roomtest.map  slopetest2.emf  slopetest3.emf  slopetest4.emf  slopetest5.emf  test.map  (+9 more)
wd/models/: attacker.glb  attacker_corpse.glb  gib_generic_0.glb  gib_generic_1.glb  knight.blend  knight.blend1  knight.glb  knight_animated.glb  prj_nail.glb  prj_rocket.glb  weapon_type1.glb  wpn_rocketlauncher.glb  wpn_type1.glb
wd/models/attacker modelling/: attacker.blend  attacker.blend1
wd/models/gib-modelling/: generic_gib.blend  generic_gib.blend1
wd/models/knight modelling/: knight.blend1
wd/models/weapon modelling/: prj_nail.blend  prj_nail.blend1  prj_rocket.blend  prj_rocket.blend1  rocketlauncher.blend  rocketlauncher.blend1  type1.blend  type1.blend1  wpn_type1.blend  wpn_type1.blend1
wd/shaders/: __game_level.frag  __game_level.vert  __patches_id.frag  game_animated_character.frag  game_animated_character.vert  guns.frag  guns.vert  model_instanced_lit.frag  model_instanced_lit.vert  model_skinned.vert  model_textured.vert  model_textured_skinned.frag  particles.frag  particles.vert
